alreadyread: improve archival of items by using CSS

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,11 @@
         .htmx-request.htmx-indicator {
             opacity: 1;
         }
+
+
+        .dategroup:not(:has(> div[id^="bookmark-"]:not(.hidden))) {
+        display: none;
+        }
     </style>
 </head>
 
