alreadyread: change infinte scroll target

--- a/frontend/linkTable.html
+++ b/frontend/linkTable.html
@@ -21,7 +21,7 @@
 		</div>
 	{{- end }}
 	{{ if gt $nextPage -1 }}
-	<div hx-get="?page={{ $nextPage }}" hx-trigger="revealed" hx-swap="afterend" hx-target="#container"></div>
+	<div hx-get="?page={{ $nextPage }}" hx-trigger="revealed" hx-swap="beforeend" hx-target="#container"></div>
 	{{ end }}
 {{ end }}
 <div id="no-links">no links</div>
