--- a/frontend/linkTable.html
+++ b/frontend/linkTable.html
@@ -18,7 +18,7 @@
 					</ul>
 				</nav>
 			</header>
-			{{ .Description }}
+			{{ .Description | linebreaks}}
 			{{ if .URL }}
 			<hr>
 			<a href="{{.URL}}" title="{{ .Title }}" target="_blank" rel="noopener noreferrer">{{ .URL }}</a>
