--- a/frontend/linkTable.html
+++ b/frontend/linkTable.html
@@ -18,7 +18,9 @@
 					</ul>
 				</nav>
 			</header>
-			{{ .Description | linebreaks}}
+			<p style="white-space: pre-line;">
+			{{ .Description }}
+			</p>
 			{{ if .URL }}
 			<hr>
 			<a href="{{.URL}}" title="{{ .Title }}" target="_blank" rel="noopener noreferrer">{{ .URL }}</a>
